// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chart smoke instantiation > renders AreaChart without throwing 1`] = `
<div
  class="sr-only"
  data-testid="chart-data-table-area"
  id="_r_1_"
>
  <p>
    Cumulative cash flow — Deposits and withdrawals · YTD
  </p>
  <table>
    <thead>
      <tr>
        <th
          scope="col"
        >
          Month
        </th>
        <th
          scope="col"
        >
          Cumulative
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          2026-01
        </th>
        <td>
          5000
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-02
        </th>
        <td>
          12500
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-03
        </th>
        <td>
          18200
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04
        </th>
        <td>
          24400
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`chart smoke instantiation > renders BarChart without throwing 1`] = `
<div
  class="sr-only"
  data-testid="chart-data-table-bar"
  id="_r_2_"
>
  <p>
    Monthly P&L — Last 6 months
  </p>
  <table>
    <thead>
      <tr>
        <th
          scope="col"
        >
          Month
        </th>
        <th
          scope="col"
        >
          P&L
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Nov
        </th>
        <td>
          1200
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Dec
        </th>
        <td>
          -450
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Jan
        </th>
        <td>
          2100
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Feb
        </th>
        <td>
          980
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Mar
        </th>
        <td>
          -230
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Apr
        </th>
        <td>
          1640
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`chart smoke instantiation > renders Calendar without throwing 1`] = `
<div
  class="sr-only"
  data-testid="chart-data-table-calendar"
  id="_r_6_"
>
  <p>
    Dividend calendar — April 2026 — 3 received · 2 scheduled · all brokers
  </p>
  <table>
    <thead>
      <tr>
        <th
          scope="col"
        >
          Type
        </th>
        <th
          scope="col"
        >
          Ticker
        </th>
        <th
          scope="col"
        >
          Date
        </th>
        <th
          scope="col"
        >
          Detail
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Dividend (
          received
          )
        </th>
        <td>
          KO
        </td>
        <td>
          2026-04-12
        </td>
        <td>
          48.5
           
          USD
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Dividend (
          scheduled
          )
        </th>
        <td>
          JNJ
        </td>
        <td>
          2026-04-29
        </td>
        <td>
          59.5
           
          USD
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Corp action (
          split
          )
        </th>
        <td>
          GOOGL
        </td>
        <td>
          2026-04-15
        </td>
        <td>
          2-for-1 stock split effective at market open 2026-04-15
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`chart smoke instantiation > renders DonutChart without throwing 1`] = `
<div
  class="sr-only"
  data-testid="chart-data-table-donut"
  id="_r_3_"
>
  <p>
    Allocation by sector — 5 sectors · $226,390 total
  </p>
  <table>
    <thead>
      <tr>
        <th
          scope="col"
        >
          Segment
        </th>
        <th
          scope="col"
        >
          Value
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Tech
        </th>
        <td>
          92500
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Financials
        </th>
        <td>
          54200
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Energy
        </th>
        <td>
          38900
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Healthcare
        </th>
        <td>
          22800
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Other
        </th>
        <td>
          17990
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`chart smoke instantiation > renders LazyCandlestick inside Suspense without throwing 1`] = `
<div
  class="sr-only"
  data-testid="chart-data-table-candlestick"
  id="_r_a_"
>
  <p>
    AAPL · last 14 sessions
  </p>
  <table>
    <thead>
      <tr>
        <th
          scope="col"
        >
          Date
        </th>
        <th
          scope="col"
        >
          Open
        </th>
        <th
          scope="col"
        >
          High
        </th>
        <th
          scope="col"
        >
          Low
        </th>
        <th
          scope="col"
        >
          Close
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          2026-04-12
        </th>
        <td>
          180
        </td>
        <td>
          182.5
        </td>
        <td>
          178
        </td>
        <td>
          182
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-13
        </th>
        <td>
          182.22
        </td>
        <td>
          185.06
        </td>
        <td>
          180.91
        </td>
        <td>
          183.3
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-14
        </th>
        <td>
          183.97
        </td>
        <td>
          185.83
        </td>
        <td>
          182.01
        </td>
        <td>
          183.13
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-15
        </th>
        <td>
          184.89
        </td>
        <td>
          185.6
        </td>
        <td>
          180.93
        </td>
        <td>
          182.91
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-16
        </th>
        <td>
          184.84
        </td>
        <td>
          186.47
        </td>
        <td>
          182.05
        </td>
        <td>
          183.53
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-17
        </th>
        <td>
          183.89
        </td>
        <td>
          186.4
        </td>
        <td>
          182.97
        </td>
        <td>
          184.46
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-18
        </th>
        <td>
          182.36
        </td>
        <td>
          185.2
        </td>
        <td>
          180.42
        </td>
        <td>
          184.28
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-19
        </th>
        <td>
          180.7
        </td>
        <td>
          183.69
        </td>
        <td>
          179.07
        </td>
        <td>
          182.2
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-20
        </th>
        <td>
          179.37
        </td>
        <td>
          181.36
        </td>
        <td>
          178.36
        </td>
        <td>
          179.08
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-21
        </th>
        <td>
          178.79
        </td>
        <td>
          179.91
        </td>
        <td>
          175.1
        </td>
        <td>
          176.97
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-22
        </th>
        <td>
          179.16
        </td>
        <td>
          180.48
        </td>
        <td>
          175.73
        </td>
        <td>
          177.49
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-23
        </th>
        <td>
          180.48
        </td>
        <td>
          182.49
        </td>
        <td>
          179.97
        </td>
        <td>
          180.49
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-24
        </th>
        <td>
          182.48
        </td>
        <td>
          185.47
        </td>
        <td>
          180.72
        </td>
        <td>
          184.17
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-25
        </th>
        <td>
          184.76
        </td>
        <td>
          187.71
        </td>
        <td>
          182.9
        </td>
        <td>
          186.58
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`chart smoke instantiation > renders LazyStackedBar inside Suspense without throwing 1`] = `
<div
  class="sr-only"
  data-testid="chart-data-table-stacked-bar"
  id="_r_8_"
>
  <p>
    Broker contribution — Asset class breakdown by broker
  </p>
  <table>
    <thead>
      <tr>
        <th
          scope="col"
        >
          Broker
        </th>
        <th
          scope="col"
        >
          Stocks
        </th>
        <th
          scope="col"
        >
          ETFs
        </th>
        <th
          scope="col"
        >
          Crypto
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          IBKR
        </th>
        <td>
          80000
        </td>
        <td>
          22000
        </td>
        <td>
          0
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Binance
        </th>
        <td>
          0
        </td>
        <td>
          0
        </td>
        <td>
          32000
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Lynx
        </th>
        <td>
          60000
        </td>
        <td>
          12000
        </td>
        <td>
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`chart smoke instantiation > renders LazyWaterfall inside Suspense without throwing 1`] = `
<div
  class="sr-only"
  data-testid="chart-data-table-waterfall"
  id="_r_9_"
>
  <p>
    Where your value came from — YTD · 2026-01-01 to 2026-04-26
  </p>
  <table>
    <thead>
      <tr>
        <th
          scope="col"
        >
          Step
        </th>
        <th
          scope="col"
        >
          Component
        </th>
        <th
          scope="col"
        >
          Delta
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Start value
        </th>
        <td>
          start
        </td>
        <td>
          220000
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Deposits
        </th>
        <td>
          deposits
        </td>
        <td>
          10000
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Withdrawals
        </th>
        <td>
          withdrawals
        </td>
        <td>
          -2000
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Realized gains
        </th>
        <td>
          realized_gains
        </td>
        <td>
          4200
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Unrealized gains
        </th>
        <td>
          unrealized_gains
        </td>
        <td>
          8420
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Dividends
        </th>
        <td>
          dividends_received
        </td>
        <td>
          1850
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Interest
        </th>
        <td>
          interest
        </td>
        <td>
          240
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Fees
        </th>
        <td>
          fees
        </td>
        <td>
          -90
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          FX
        </th>
        <td>
          fx_effects
        </td>
        <td>
          270
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          End value
        </th>
        <td>
          end
        </td>
        <td>
          242890
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`chart smoke instantiation > renders LineChart without throwing 1`] = `
<div
  class="sr-only"
  data-testid="chart-data-table-line"
  id="_r_0_"
>
  <p>
    Portfolio value — Last 30 days · all brokers
  </p>
  <table>
    <thead>
      <tr>
        <th
          scope="col"
        >
          Date
        </th>
        <th
          scope="col"
        >
          Total
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          2026-03-27
        </th>
        <td>
          220000
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-03-28
        </th>
        <td>
          222422.3761355827
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-03-29
        </th>
        <td>
          224682.6641138138
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-03-30
        </th>
        <td>
          226636.61943163554
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-03-31
        </th>
        <td>
          228173.7205561349
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-01
        </th>
        <td>
          229229.33580988293
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-02
        </th>
        <td>
          229791.83842071556
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-03
        </th>
        <td>
          229903.88646782245
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-04
        </th>
        <td>
          229657.72681986116
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-05
        </th>
        <td>
          229185.0400362694
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-06
        </th>
        <td>
          228642.4441670603
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-07
        </th>
        <td>
          228194.25328135246
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-08
        </th>
        <td>
          227994.38877111432
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-09
        </th>
        <td>
          228169.43474428158
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-10
        </th>
        <td>
          228804.70287305932
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-11
        </th>
        <td>
          229934.84076401588
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-12
        </th>
        <td>
          231540.0177379459
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-13
        </th>
        <td>
          233548.10791215062
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-14
        </th>
        <td>
          235842.63025810482
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-15
        </th>
        <td>
          238275.57154446977
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-16
        </th>
        <td>
          240683.6805375705
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-17
        </th>
        <td>
          242906.43969423455
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-18
        </th>
        <td>
          244803.73591328462
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-19
        </th>
        <td>
          246271.28504143868
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-20
        </th>
        <td>
          247252.11210980522
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-21
        </th>
        <td>
          247742.82348642612
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-22
        </th>
        <td>
          247793.98046800878
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-23
        </th>
        <td>
          247504.53318358792
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-24
        </th>
        <td>
          247010.92755999637
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2026-04-25
        </th>
        <td>
          246472.08452091357
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`chart smoke instantiation > renders Sparkline without throwing 1`] = `
<div
  class="sr-only"
  data-testid="chart-data-table-sparkline"
  id="_r_5_"
>
  <p>
    Portfolio · 7d
  </p>
  <p>
    Sparkline trend
     (up)
    : 
    7
     points; first
     
    2026-04-20
    =
    218500
    ; last 
    2026-04-26
    =
    226390
    .
  </p>
</div>
`;

exports[`chart smoke instantiation > renders Treemap without throwing 1`] = `
<div
  class="sr-only"
  data-testid="chart-data-table-treemap"
  id="_r_7_"
>
  <p>
    Concentration — Tile size = weight; color = today’s change
  </p>
  <table>
    <thead>
      <tr>
        <th
          scope="col"
        >
          Ticker
        </th>
        <th
          scope="col"
        >
          Weight %
        </th>
        <th
          scope="col"
        >
          Value
        </th>
        <th
          scope="col"
        >
          Daily change %
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          NVDA
        </th>
        <td>
          14.2
        </td>
        <td>
          32140
        </td>
        <td>
          2.1
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          MSFT
        </th>
        <td>
          11.8
        </td>
        <td>
          26720
        </td>
        <td>
          0.6
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          AAPL
        </th>
        <td>
          9.4
        </td>
        <td>
          21280
        </td>
        <td>
          -1.2
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          GOOGL
        </th>
        <td>
          7.1
        </td>
        <td>
          16080
        </td>
        <td>
          1.4
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          BRK.B
        </th>
        <td>
          6.8
        </td>
        <td>
          15400
        </td>
        <td>
          0.3
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          JNJ
        </th>
        <td>
          5.2
        </td>
        <td>
          11780
        </td>
        <td>
          -0.4
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          XOM
        </th>
        <td>
          4.6
        </td>
        <td>
          10410
        </td>
        <td>
          3.2
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          OTHER
        </th>
        <td>
          40.9
        </td>
        <td>
          92580
        </td>
        <td />
      </tr>
    </tbody>
  </table>
</div>
`;
